<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <View
        android:id="@+id/status_bar_spacer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view_header_background"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/primaryRed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/go_back"
        app:tint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_job"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/view_header_background"
        app:layout_constraintBottom_toBottomOf="@id/view_header_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/text_job_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="4dp"
        android:text="@string/job_title"
        android:textColor="#212121"
        android:textSize="14sp"
        android:textStyle="bold"
        android:labelFor="@+id/edit_text_job_title"
        app:layout_constraintTop_toBottomOf="@id/view_header_background"
        app:layout_constraintStart_toStartOf="@id/input_layout_job_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_job_title"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="52dp"
        app:hintEnabled="false"
        app:boxStrokeColor="#9E9E9E"
        app:boxStrokeWidth="1dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/text_job_title_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_job_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/project_manager"
            android:textColorHint="#BDBDBD"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:paddingVertical="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/text_employment_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:text="@string/type_of_employment"
        android:textColor="#212121"
        android:textSize="14sp"
        android:textStyle="bold"
        android:labelFor="@+id/spinner_employment"
        app:layout_constraintTop_toBottomOf="@id/input_layout_job_title"
        app:layout_constraintStart_toStartOf="@id/input_layout_employment" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_employment"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="52dp"
        app:hintEnabled="false"
        app:boxStrokeColor="#9E9E9E"
        app:boxStrokeWidth="1dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/text_employment_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <AutoCompleteTextView
            android:id="@+id/spinner_employment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/full_time"
            android:textColorHint="#BDBDBD"
            android:textColor="@color/black"
            android:paddingVertical="12dp"
            android:entries="@array/employment_values_array"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/text_salary_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:text="@string/salary"
        android:textColor="#212121"
        android:textSize="14sp"
        android:textStyle="bold"
        android:labelFor="@+id/edit_text_salary"
        app:layout_constraintTop_toBottomOf="@id/input_layout_employment"
        app:layout_constraintStart_toStartOf="@id/input_layout_salary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_salary"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="52dp"
        app:hintEnabled="false"
        app:boxStrokeColor="#9E9E9E"
        app:boxStrokeWidth="1dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/text_salary_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_20k_30k"
            android:textColorHint="#BDBDBD"
            android:inputType="text"
            android:textColor="@color/black"
            android:paddingVertical="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/text_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:text="@string/location"
        android:textColor="#212121"
        android:textSize="14sp"
        android:textStyle="bold"
        android:labelFor="@+id/edit_text_location"
        app:layout_constraintTop_toBottomOf="@id/input_layout_salary"
        app:layout_constraintStart_toStartOf="@id/input_layout_location" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_location"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="52dp"
        app:hintEnabled="false"
        app:boxStrokeColor="#9E9E9E"
        app:boxStrokeWidth="1dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/text_location_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/colombo"
            android:textColorHint="#BDBDBD"
            android:inputType="textPostalAddress"
            android:textColor="@color/black"
            android:paddingVertical="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_job"
        android:layout_width="wrap_content"
        android:paddingHorizontal="60dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="52dp"
        android:backgroundTint="@color/primaryRed"
        android:text="@string/add_job"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/input_layout_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>