<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp">
    <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_top"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="59dp" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="fitCenter"
        android:src="@drawable/crud_logo"
        android:contentDescription="@string/crud_logo"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="@color/primaryRed"
        android:textStyle="bold"
        android:textSize="28sp"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/image_logo" />


    <TextView
        android:id="@+id/text_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="4dp"
        android:text="@string/email"
        android:textColor="@color/gray_tint"
        android:textSize="16sp"
        android:textStyle="bold"
        android:labelFor="@+id/edit_text_email"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="@id/input_layout_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="20dp"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/border_dark"
        app:boxStrokeWidth="1dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_person"
        app:endIconTint="@color/gray_tint"
        app:layout_constraintTop_toBottomOf="@id/text_email_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:paddingVertical="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/text_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:text="@string/password"
        android:textColor="@color/gray_tint"
        android:textSize="16sp"
        android:textStyle="bold"
        android:labelFor="@+id/edit_text_password"
        app:layout_constraintTop_toBottomOf="@id/input_layout_email"
        app:layout_constraintStart_toStartOf="@id/input_layout_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="20dp"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/border_dark"
        app:boxStrokeWidth="1dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_lock"
        app:endIconTint="@color/gray_tint"
        app:layout_constraintTop_toBottomOf="@id/text_password_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:paddingVertical="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/my_button"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="60dp"
        android:backgroundTint="@color/primaryRed"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/input_layout_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/layout_footer"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black_dimmed"
            android:text="@string/dont_have_an_account_please"/>

        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/register_bottom"
            android:textColor="@color/primaryRed"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>